--- a/css/styles.css
+++ b/css/styles.css
@@ -340,6 +340,36 @@ ul {
   flex-direction: column;
 }
 
+.image-thumb {
+  position: relative;
+}
+
+.box-2 {
+  margin: 0 auto;
+  position: absolute;
+  bottom: 0;
+  width: 370px;
+  height: 70px;
+
+  background: rgba(47, 48, 58, 0.8);
+  color: var(--header-bg-color);
+}
+
+.thumb-title {
+  position: absolute;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 /* Section */
 
 .section-first {
@@ -648,4 +678,79 @@ ul {
   width: 20px;
   height: 20px;
   fill: var(--hero-text-color);
+}
+
+/*------------Overlay---------- */
+
+/* .overlay-thumb {
+  position: relative;
+}
+
+.overlay-cover {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(33, 150, 243, 0.9);
+}
+
+.overlay-text {
+  text-align: center;
+
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+} */
+
+/*------------------ Модальнок Окно-------------------------- */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+
+  background: rgba(0, 0, 0, 0.2);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  min-height: 581px;
+  min-width: 528px;
+
+  background: #ffffff;
+}
+
+.close-button {
+  position: absolute;
+  display: inline-flex;
+  top: 8px;
+  right: 8px;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+
+  background: var(--header-bg-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.close-icon {
+  width: 11px;
+  height: 11px;
 }
