finished Studio-Page

--- a/css/styles.css
+++ b/css/styles.css
@@ -199,6 +199,21 @@ ul {
 
 .site-nav .link.current {
   color: var(--accent-color);
+  position: relative;
+}
+
+.current::after {
+  position: absolute;
+  content: '';
+  bottom: 0;
+
+  display: block;
+  border-radius: 2px;
+
+  width: 100%;
+  height: 4px;
+
+  background: #2196f3;
 }
 
 /* Contacts-list */
@@ -344,9 +359,32 @@ ul {
   position: relative;
 }
 
-.box-2 {
-  margin: 0 auto;
+.box-1 {
   position: absolute;
+  margin: 0 auto;
+
+  bottom: 0;
+  width: 370px;
+  height: 70px;
+
+  background: rgba(47, 48, 58, 0.8);
+  color: var(--header-bg-color);
+}
+
+.box-2 {
+  position: absolute;
+
+  bottom: 0;
+  width: 370px;
+  height: 70px;
+
+  background: rgba(47, 48, 58, 0.8);
+  color: var(--header-bg-color);
+}
+
+.box-3 {
+  position: absolute;
+
   bottom: 0;
   width: 370px;
   height: 70px;
@@ -356,18 +394,16 @@ ul {
 }
 
 .thumb-title {
-  position: absolute;
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 700;
+  padding-top: 27px;
+  padding-bottom: 27px;
 
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
   text-align: center;
+
   letter-spacing: 0.03em;
   text-transform: uppercase;
-
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 
 /* Section */
