--- a/css/styles.css
+++ b/css/styles.css
@@ -718,26 +718,35 @@ ul {
 
 /*------------Overlay---------- */
 
-/* .overlay-thumb {
+.img-thumb {
   position: relative;
+  overflow: hidden;
 }
 
 .overlay-cover {
   position: absolute;
   top: 0;
+  left: 0;
+  padding: 63px 24px;
+
   width: 100%;
   height: 100%;
   background: rgba(33, 150, 243, 0.9);
+
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.images-item:hover .overlay-cover {
+  transform: translateY(0);
 }
 
 .overlay-text {
-  text-align: center;
-
   font-size: 18px;
-  line-height: 28px;
+  line-height: 1.55;
   letter-spacing: 0.03em;
   color: #ffffff;
-} */
+}
 
 /*------------------ Модальнок Окно-------------------------- */
 
